css/style.css
/* ... */
.social{
    height: 30px;
}



.social a{
    color: #fff;
    font-size: 15px;
    margin:0 15px;
    transition: all ease 0.3s;
}


.social a:hover{
    transition: all ease 0.3s;
    opacity: 0.5;
}


.home-down {
    color: #fff;
    font-size: 40px;
    padding-top: 40px;
    padding-left: 20px;
    display: inline-block;
    transition: all 0.3s ease;
}


.home-down:hover{
    color: #fff;
	transition:all 0.3s ease;
}

.home-down:focus{
    color: #fff;
}

/* arrow css3 animation */

@-webkit-keyframes bounce {
	 0%, 100% {-webkit-transform: translateY(0);} 
	 50% {-webkit-transform: translateY(-20px);}
}
 
@-moz-keyframes bounce {
	 0%, 100% {-moz-transform: translateY(0);}
	 50% {-moz-transform: translateY(-20px);}
}
 
@-o-keyframes bounce {
	 0%, 100% {-o-transform: translateY(0);}
	 50% {-o-transform: translateY(-20px);}
}

@keyframes bounce {
	 0%, 100% {transform: translateY(0);}
	 50% {transform: translateY(-20px);}
}
 
 .bounce {
	 -webkit-border-radius:50%;
	 -moz-border-radius:50%;
	 -ms-border-radius:50%;
	 border-radius:50%;
	 animation: bounce 2s infinite;
	 -webkit-animation: bounce 2s infinite;
	 -moz-animation: bounce 2s infinite;
	 -o-animation: bounce 2s infinite;
}

.diagonal{
    position: absolute;
    left: 0;
    bottom: 0;
    pointer-events: none;
    background: #fff;
    float: left;
    z-index: 1000;
}

.diagonal-gray{
    position: absolute;
    left: 0;
    bottom: 0;
    pointer-events: none;
    background: #fff;
    float: left;
    z-index: 100;
    margin-top: 90px;
}

.diagonal-gray path {
       fill: #f5f5f5;
}

.diagonal-white{
    background: #f5f5f5;
    margin-bottom: -6px;
    margin-top: 60px;
}

.diagonal-white path {
    fill: #fff;
    stroke: #f5f5f5;
    stroke-width: 0;
}

.diagonal.home-left{
    position: absolute;
    bottom: 0;
    left: 0;
    background: none;
    z-index: 99;
}

.diagonal.home-right{
    position: absolute;
    bottom: 0;
    right: 0 !important;
    background: none;
    z-index: 99;
    left: auto;
}

.diagonal.home-left, .diagonal.home-right path {
    fill: #f5f5f5;
    stroke: #f5f5f5;
    stroke-width: 4;
}

.diag p{
    font-size: 15px;
    color: #748182;
    line-height: 28px;
}

.diag .section-title.dleft{
    text-align: left;
    padding: initial;
}

.diag .section-title.dleft .portfolio_filter ul{
    float: left;
}

.diag .section-title.dright{
    text-align: right;
    padding: initial;
}

.diag section{
    position: relative;
}

.diag .contact .contact-info li{
    line-height: 36px;
    font-size: 14.5px;
    color: #414141;
    text-align: left;
    list-style: none;
}

.diag .page-title.sub{
    font-size: 23px;
    text-align: right;
    width: 100%;
    float: right;
}

.diag .page-title.sub h5{ 
        font-weight: bold;
    line-height: 30px;
    padding-bottom: 15px;
}

.diag .social-icons a {
    color: #000;
    font-size: 13px;
    width: 26px;
    height: 18px;
    display: inline-block;
}

.diag .home-content h1{
    text-align: left;
}

.diag .home-content .social{
    text-align: left;
}

.diag .home-content .home-down.bounce{
    float: left;
    padding: 50px 74px 0;
}

.social-icons a:hover {
    font-size: 15px;
}

.fb:hover{
    color: #3b5998!important;
    transition: all ease 0.1s;
}

.tw:hover{
    color: #55acee!important;
    transition: all ease 0.1s;
}

.ins:hover{
    color: #cd486b!important;
    transition: all ease 0.1s;
}

.bh:hover{
    color: #1769ff!important;
    transition: all ease 0.1s;
}

.dr:hover{
    color: #ea4c89!important;
    transition: all ease 0.1s;
}


.sitebtn{
    border: solid 2px #dfdfdf;
    background: none;
    font-size: 13px;
    padding:9px 11px;
    text-align: left;
    min-width: 140px;
    line-height: 17px;
    transition: all ease 0.3s;
    color:#000; 
}

.sitebtn:after{
    font-family: FontAwesome;
    content: "\f178";
    color: #000;
    float: right;
}

.sitebtn:focus{
    border: solid 2px #000;
}

.sitebtn:hover{
    background: #000;
    color: #fff;
    border-color: #000;
    transition: all ease 0.3s;
}

.sitebtn:hover:after{
    color: #fff;
}

.sitebtn:focus{
    border: solid 2px #dfdfdf;
}


/*------------------------ 3 About ------------------------*/	

.about.type-1 .about-image{
    padding-bottom: 70px;
    background: #e8e8e8;
}

.about.type-1 .about-image img:before{
    background: #e4e4e4; 
}

.about.type-1 .about-image img{
    width: 100%;
    box-shadow: 0px 0px 85px 0px rgba(0, 0, 0, 0.14);
    margin-top: -15%;
    margin-left: calc(15% - 15px);
}

.about.type-1.vertiqal .about-image img{
    width: 100%;
    box-shadow: 0px 0px 85px 0px rgba(0, 0, 0, 0.14);
    margin-top: -15%;
    margin-left: -15%;
}

.diagonal-title h5{
    padding-bottom: 20px;
    font-size: 25px;
    line-height: 31px;
}

.diagonal span{
    font-size: 15px;
    color: #b3b3b3;
    letter-spacing: 3px;
    margin-bottom: 5px;
    display: block;
}

.about{
    padding-top:90px;
 }   

.diag .about{
    position: relative;
 } 

.about-image img{
    width: 70%;
 }   


.work-areas{
    width: 100%;
    display: inline-block!important;
}

.work-areas .area .icon i:before{
    font-size: 40px;
    margin-left: 5px;
}

.work-areas .area .icon i{
    display: inline-block;
}

.work-areas .area .icon {
    width: 20%;
    float: left;
}

.work-areas .area .text {
    width: 80%;
    float: left;
}

.work-areas .area .text h6{
    font-size: 15px;
    letter-spacing: 2px;
    margin-bottom: 8px;
}

.work-areas .area .text p{
    font-size: 13px;
    line-height: 24px;
}


.about h2{
    font-size: 23px;
    line-height: 30px;
 } 

.about-text{
    display: table;
    height: 407px;
    text-align: justify;
    
 } 

.out{
    display: table-cell;
   vertical-align: middle;
   
 } 
 .out p{
     font-size: 16px;
     text-align: justify
 }

.typed-cursor{
    opacity: 1;
    -webkit-animation: blink 0.7s infinite;
    -moz-animation: blink 0.7s infinite;
    animation: blink 0.7s infinite;
}
/* ... */

